After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693042 - squeak window dead on return from full screen
squeak window dead on return from full screen
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-02-02 02:10 UTC by Matthew Miller
Modified: 2013-02-02 10:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
meta-window-actor: Correctly create a new pixmap when redirecting a window again (1.13 KB, patch)
2013-02-02 09:34 UTC, drago01
none Details | Review
meta-window-actor: Correctly create a new pixmap when redirecting a window again (1.13 KB, patch)
2013-02-02 09:36 UTC, drago01
committed Details | Review

Description Matthew Miller 2013-02-02 02:10:32 UTC
This is on Fedora 18, up to date gnome-shell-3.6.2-6.

Description of problem:

I first saw this in Scratch, but it's easily replicated with the Squeak image as well. Go to full screen, and when you exit, you get a completely blank unresponsive window


Version-Release number of selected component (if applicable):

squeak-vm-4.10.2.2614-5.fc18.x86_64
squeak-image-4.3-1.fc18.noarch
scratch-1.4.0.7-5.fc18.mattdm.noarch

How reproducible:

100%

Steps to Reproduce:
1. Run squeak with the squeak-image
2. Press the fullscreen icon at the far right of the menu bar
3. Press it again to exit full screen
  
Actual results:

Completely black window that doesn't respond to anything


Expected results:

Functional non-full-screen window

Additional info:

Same thing happens in Scratch when 'Smalltalk fullScreenMode: false.' is used.

Problem does not happen in Gnome fallback mode or in Xfce.

Using

 Meta.disable_unredirect_for_screen(global.screen);

makes the problem go away.
Comment 1 drago01 2013-02-02 09:34:14 UTC
Created attachment 235053 [details] [review]
meta-window-actor: Correctly create a new pixmap when redirecting a window again

We should call meta_window_actor_detach not
meta_window_actor_queue_create_pixmap to create a new when we redirect a
previously unredirected window again.
Comment 2 drago01 2013-02-02 09:35:48 UTC
Matthew to make this easier to test for you I have submitted a scratch build with this patch for F18: http://koji.fedoraproject.org/koji/taskinfo?taskID=4923613

Can you please test it and verify whether it fixes your problem or not?
Comment 3 drago01 2013-02-02 09:36:51 UTC
Created attachment 235054 [details] [review]
meta-window-actor: Correctly create a new pixmap when redirecting a window again

We should call meta_window_actor_detach not
meta_window_actor_queue_create_pixmap to create a new pixmap when we redirect a
previously unredirected window again.


---

Fix commit message.
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-02-02 10:00:17 UTC
Review of attachment 235054 [details] [review]:

OK.
Comment 5 drago01 2013-02-02 10:03:10 UTC
Attachment 235054 [details] pushed as 2ecc50a - meta-window-actor: Correctly create a new pixmap when redirecting a window again